[gd_scene load_steps=5 format=2]

[ext_resource path="res://Environment/Window.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 48 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 32, 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 1.5 )

[node name="Window" type="Area2D"]
collision_layer = 8
collision_mask = 11
script = ExtResource( 1 )

[node name="BoardTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BoardRepairTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Board" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 11

[node name="MeshInstance2D" type="MeshInstance2D" parent="Board"]
modulate = Color( 0.215686, 0.105882, 0.105882, 1 )
mesh = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board"]
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Window_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Window_body_exited"]
[connection signal="timeout" from="BoardTimer" to="." method="_on_BoardTimer_timeout"]
[connection signal="timeout" from="BoardRepairTimer" to="." method="_on_BoardRepairTimer_timeout"]
[connection signal="timeout" from="BoardRepairTimer" to="." method="_on_BoardTimer_timeout"]
